Test Data/WSN/WSN-MELA-5/outputs/wsn-scso/2025-07-18_09-33-21/problem_iter2_stdout_4.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/wsn/main.py", line 7, in <module>
    import gpt  # 自定义的启发式模块
    ^^^^^^^^^^
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\wsn\gpt.py", line 27
    local_best = Positions[neighbors[np.argmin(fitness[neighbors])]
                          ^
SyntaxError: '[' was never closed
